force-app/main/default/objects/OrgVProduct__c/OrgVProduct__c.object-meta.xml
<CustomObject>
    <label>OrgV do Produto</label>
    <nameField>
        <displayFormat>ORGV-{00000}</displayFormat>
        <label>OrgV do Produto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrgV do Produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>