force-app/main/default/objects/OrgVProduct__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>