force-app/main/default/objects/OrgVProduct__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Setor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>