force-app/main/default/objects/OrgVProduct__c/fields/OrgVExternal__c.field-meta.xml
<CustomField>
    <fullName>OrgVExternal__c</fullName>
    <externalId>true</externalId>
    <label>OrgV External</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>