force-app/main/default/objects/OrgVProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>OrgV do Produto</relationshipLabel>
    <relationshipName>OrgV_do_Produto</relationshipName>
    <type>Lookup</type>
</CustomField>