force-app/main/default/objects/OrgVProduct__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>OrgV do Produto</relationshipLabel>
    <relationshipName>OrgV_do_Produto</relationshipName>
    <type>Lookup</type>
</CustomField>