force-app/main/default/objects/OrgVProduct__c/fields/SupplierCenter__c.field-meta.xml
<CustomField>
    <fullName>SupplierCenter__c</fullName>
    <label>Centro Fornecedor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>